// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render Expense Summary correctly 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <div
      className="page-header__title"
    >
      <h1>
        Viewing 
        <span>
          3
        </span>
          
        expenses
         totaling 
        <span>
          115000
        </span>
         
      </h1>
    </div>
    <div
      className="page-header__actions"
    >
      <Link
        className="button"
        to="/create"
      >
        Add Expense
      </Link>
    </div>
  </div>
</div>
`;

exports[`Render Expense Summary with no expenses 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <div
      className="page-header__title"
    >
      <h1>
        You have no expenses
      </h1>
    </div>
    <div
      className="page-header__actions"
    >
      <Link
        className="button"
        to="/create"
      >
        Add Expense
      </Link>
    </div>
  </div>
</div>
`;

exports[`Render Expense Summary with one expense 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <div
      className="page-header__title"
    >
      <h1>
        Viewing 
        <span>
          1
        </span>
          
        expense
         totaling 
        <span>
          100000
        </span>
         
      </h1>
    </div>
    <div
      className="page-header__actions"
    >
      <Link
        className="button"
        to="/create"
      >
        Add Expense
      </Link>
    </div>
  </div>
</div>
`;
